--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- 
+
+	Copyrihgt Git.Training
+-->	
+
 <head>
 	<title>An Example Website </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
