fb adding some trouble to simple html

--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,10 @@
 <!-- 
 
 	Copyrihgt Git.Training
-	Adding changes before reasing conflicts
 -->	
 
 <head>
-	<title>A Website </title>
+	<title>Lots of Trouble </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Jvebberberbrebent
+			Just nothing but trouble.
 		</p>
 	</main>
 	<footer class="container">
