mb conflicting changes brewing.

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 -->	
 
 <head>
-	<title>A Greate Website </title>
+	<title>A Website </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,7 +20,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Jvebberberbrebent
 		</p>
 	</main>
 	<footer class="container">
