--- a/simple.html
+++ b/simple.html
@@ -2,10 +2,11 @@
 <!-- 
 
 	Copyrihgt Git.Training
+	bjvbjvberkjvbrjvbejv
 -->	
 
 <head>
-	<title>Lots of Trouble </title>
+	<title>Lots of Trouble in a little repo </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
