local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Mevlüde Arslan 2022</p>
+		<p>&copy; Gşt training 2022, all rights reserved.</p>
 	</footer>
 </body>
 </html>
